--- a/lesson5_homework/app/src/main/res/values/strings.xml
+++ b/lesson5_homework/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="don_t_have_an_account">Don\'t have an account?</string>
     <string name="sign_in">Sign In</string>
     <string name="create_a_new_account">Create a new account</string>
+    <string name="required_field">* required field</string>
 </resources>
